<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.popular.broadcast.presentation.detail.DetailFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="news"
            type="com.popular.broadcast.domain.schedule.model.News" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/news_media"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:load_url_or_placeholder="@{news.thumb}"
                android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_gravity="center_vertical|start"
                        android:text="@{com.popular.broadcast.util.TimeUtil.getDateFormatted(news.updated)}"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:layout_gravity="center_vertical|end"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/section_label_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:text="@string/section"/>

                        <TextView
                            android:id="@+id/section_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@{news.section}"/>

                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/author_label_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:text="@string/author"/>

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@{news.byline}"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/title_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/headline"/>

                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@{news.title}"/>

                <TextView
                    android:id="@+id/abstract_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/news_abstract"/>

                <TextView
                    android:id="@+id/abstract_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@{news.summary}"/>

                <View
                    android:id="@+id/spacer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/open_web_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textAllCaps="false"
                    android:text="@string/read_from_source"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>